modify all handler classes to use PircBotX; tests failing